[tool.poetry]
name = "flaskproject1"
version = "0.1.0"
description = ""
authors = ["Soncha19 <sofeeyahum@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
sqlalchemy = "^1.4.44"
marshmallow = "^3.19.0"
flask-bcrypt = "^1.0.1"
flask-httpauth = "^4.7.0"
sqlalchemy-serializer = "^1.4.1"
marshmallow-sqlalchemy = "^0.28.1"
alembic = "^1.8.1"
pymysql = "^1.0.2"
flask-testing = "^0.8.1"
coverage = "^6.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
